--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,51 @@
+alembic==1.4.3
 autopep8==1.5
+certifi==2020.6.20
+chardet==3.0.4
+chart-studio==1.1.0
 click==7.1.1
 dash==1.10.0
+dash-auth==1.4.1
 dash-bootstrap-components==0.9.1
 dash-core-components==1.9.0
 dash-html-components==1.0.3
 dash-renderer==1.3.0
 dash-table==4.6.2
+decorator==4.4.2
 Flask==1.1.1
 Flask-Compress==1.4.0
+Flask-Login==0.5.0
+Flask-Migrate==2.5.3
+Flask-SeaSurf==0.2.2
+Flask-SQLAlchemy==2.4.4
 future==0.18.2
+gunicorn==20.0.4
+idna==2.10
 inflection==0.5.1
 itsdangerous==1.1.0
 Jinja2==2.11.1
+Mako==1.1.3
 MarkupSafe==1.1.1
 numpy==1.18.2
 pandas==1.0.3
+passlib==1.7.2
 plotly==4.6.0
+psycopg2==2.8.6
+ptvsd==4.3.2
 pycodestyle==2.5.0
 python-dateutil==2.8.1
+python-editor==1.0.4
 pytz==2019.3
+requests==2.24.0
 retrying==1.3.3
+simplejson==3.17.2
 six==1.14.0
+SQLAlchemy==1.3.19
+SQLAlchemy-Searchable==1.2.0
+SQLAlchemy-Utils==0.36.8
 tssplit==1.0.4
+ua-parser==0.10.0
+urllib3==1.25.10
+validators==0.18.1
 Werkzeug==1.0.1
 xlrd==1.2.0
