--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,13 @@ click==7.1.1
 dash==1.16.2
 dash-auth==1.4.1
 dash-bootstrap-components==0.9.1
-dash-core-components==1.12.1
-dash-html-components==1.1.1
-dash-renderer==1.8.2
-dash-table==4.10.1
+dash-core-components==1.9.1
+dash-html-components==1.0.3
+dash-renderer==1.4.0
+dash-table==4.6.2
 decorator==4.4.2
 Flask==1.1.1
+Flask-Caching==1.9.0
 Flask-Compress==1.4.0
 Flask-Login==0.5.0
 Flask-Migrate==2.5.3
